--- a/index.html
+++ b/index.html
@@ -14,13 +14,10 @@
         <div class="header">
             <div class="open" onclick="showhide()">
                 <span>
-
                 </span>
                 <span>
-
                 </span>
                 <span>
-
                 </span>
             </div>
             <div class="close" onclick="showhide()">
@@ -36,21 +33,6 @@
                 <h5>Fudo<span style="color:#F54748">.</span></h5>
             </div>
             <div class="header_right">
-
-                <!-- <div class="menu">
-                    <ul>
-                        <li><a href=".comp/home.html">Home</a></li>
-                        <li><a href=".comp/product.html">About Us</a></li>
-                        <li><a href=".comp/detail.html">Contact Us</a></li>
-                    </ul>
-                </div> -->
-                <!-- <div class="signIn">
-                    <a href=".comp/login.html"><button>Sign In</button></a>
-                </div>
-                <div class="signUp">
-                    <a href=".comp/signUp.html"><button>Sign Up</button></a>
-                </div> -->
-
             </div>
         </div>
         <div class="sub_content">
@@ -233,9 +215,9 @@
         let headerLast = ``
         let headerfull = `<div class="menu">
         <ul>
-            <li><a href=".comp/home.html">Home</a></li>
-            <li><a href=".comp/product.html">About Us</a></li>
-            <li><a href=".comp/detail.html">Contact Us</a></li>
+            <li><a id="Home" href=".comp/home.html">Home</a></li>
+            <li><a id="About" href=".comp/product.html">About Us</a></li>
+            <li><a id="Contact" href=".comp/detail.html">Contact Us</a></li>
         </ul>
     </div> <div class="signIn">
         <a href=".comp/login.html"><button>Sign In</button></a>
@@ -249,9 +231,9 @@
     </div>`
         let headerMenu = ` <div class="menu">
         <ul>
-            <li><a href=".comp/home.html">Home</a></li>
-            <li><a href=".comp/product.html">About Us</a></li>
-            <li><a href=".comp/detail.html">Contact Us</a></li>
+            <li><a id="Home" href=".comp/home.html">Home</a></li>
+            <li><a id="About" href=".comp/product.html">About Us</a></li>
+            <li><a id="Contact" href=".comp/detail.html">Contact Us</a></li>
         </ul>
     </div>`
 
@@ -261,6 +243,7 @@
         const headerRight = document.querySelector('.header_right')
         const opens = document.querySelector('.open')
         const closes = document.querySelector('.close')
+
         console.log(headerRight)
         window.addEventListener("load", () => {
             if (window.innerWidth < 600) {
@@ -268,11 +251,23 @@
                 menu_content.innerHTML = headerSign
                 header.appendChild(menu_content)
             } else {
-
                 headerRight.innerHTML = headerfull
-
-
             }
+            const Home = document.getElementById('Home')
+            const About = document.querySelector('#About')
+            const Contact = document.querySelector('#Contact')
+            const hrefs = window.location.href
+
+            if (hrefs.endsWith('/index.html')) {
+                Home.style.color = 'red'
+            }
+            if (hrefs.endsWith('/about.html')) {
+                About.style.color = 'red'
+            }
+            if (hrefs.endsWith('/contact.html')) {
+                Contact.style.color = 'red'
+            }
+
         })
         window.addEventListener("resize", () => {
             if (window.innerWidth < 600) {
@@ -280,11 +275,14 @@
                 menu_content.innerHTML = headerSign
                 header.appendChild(menu_content)
 
+
             } else {
                 headerRight.innerHTML = headerfull
                 header.removeChild(menu_content)
 
+
             }
+
         })
         const showhide = () => {
             headerRight.classList.toggle('active')
@@ -293,11 +291,11 @@
 
         }
         window.addEventListener('scroll', () => {
-            console.log('w')
             if (document.documentElement.scrollTop > 20) {
                 header.classList.add('active1')
             } else { header.classList.remove('active1') }
         })
+
     </script>
 </body>
 
